tests/errors/test_err_stray.f90
program stray_test
  implicit none
  integer :: a
  a = 10 @ 5
end program stray_test
